remove old /update endpoint
